fixed double right border, overflow

--- a/frontend/static/css/table.css
+++ b/frontend/static/css/table.css
@@ -9,7 +9,7 @@ table {
 }
 
 tbody{
-    display: table;
+    /* display: table; */
     width: 100%;
     height: 100%;
 }
@@ -31,6 +31,7 @@ td{
     width: calc(90%/7);
     height: calc(90%/7);
     max-width: calc(90vw/7);
+    overflow: hidden;
     max-height: calc(90%/7);
 
 }
